# Game_of_Life

./: CMakeLists.txt  Doxyfile  Makefile  README.md  config.h  drawBoard.c  draw_board.h  game  game.c  game.h  main.c  makefile
DOCUMENT/html/: annotated.html  classGameConfig-members.html  classGameConfig.html  classes.html  classmyClass-members.html  classmyClass.html  config_8h_source.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  game_8h_source.html  graph_legend.html  index.html  md_README.html  pages.html  structGameConfig-members.html  structGameConfig.html
DOCUMENT/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
console/: CMakeLists.txt  draw_board.c  draw_board.h
game/: CMakeLists.txt  game.c  game.h
